--- a/src/app/reddit-search/reddit-search.component.html
+++ b/src/app/reddit-search/reddit-search.component.html
@@ -1,11 +1,11 @@
 <h4>Incremental Search (via an API):</h4>
 
-<div class="row">
-  <div class="col s3">
+<div class="three-across">
+  <div>
     <label for="subReddit">Search reddit.com/r/</label>
     <input id="subReddit" type="text" placeholder="validate" [formControl]="subReddit">
   </div>
-  <div class="col s3">
+  <div>
     <label for="search">for search string</label>
     <input id="search" type="text" [formControl]="search">
   </div>
@@ -22,7 +22,7 @@
     float: left;
     width: 140px;
     height: 140px;
-    padding: 5px;
+    margin: 5px;
   }
   .box img {
     width: 100%;
