--- a/src/app/reddit-search/reddit-search.component.html
+++ b/src/app/reddit-search/reddit-search.component.html
@@ -1,12 +1,10 @@
-<h4>Incremental Search (via an API):</h4>
-
 <div class="three-across">
   <div>
     <label for="subReddit">Search reddit.com/r/</label>
     <input id="subReddit" type="text" placeholder="validate" [formControl]="subReddit">
   </div>
   <div>
-    <label for="search">for search string</label>
+    <label for="search">for images containing:</label>
     <input id="search" type="text" [formControl]="search">
   </div>
 </div>
@@ -16,15 +14,3 @@
     <img [src]="url">
   </div>
 </div>
-
-<style>
-  .box {
-    float: left;
-    width: 140px;
-    height: 140px;
-    margin: 5px;
-  }
-  .box img {
-    width: 100%;
-  }
-</style>
