--- a/src/app/reddit-search/reddit-search.component.html
+++ b/src/app/reddit-search/reddit-search.component.html
@@ -2,17 +2,19 @@
   <div>
     <label for="subReddit">Search reddit.com/r/</label>
     <select id="subReddit" [formControl]="subReddit">
-      <option *ngFor="let sr of subReddits" [value]="sr">{{sr}}</option>
+      <option *ngFor="let sr of subReddits" [value]="sr">
+        {{ sr }}
+      </option>
     </select>
   </div>
   <div>
     <label for="search">for images containing:</label>
-    <input id="search" type="text" [formControl]="search">
+    <input id="search" type="text" [formControl]="search" />
   </div>
 </div>
 
 <div>
   <div class="box" *ngFor="let url of results | async">
-    <img [src]="url">
+    <img [src]="url" />
   </div>
 </div>
