--- a/src/app/reddit-search/reddit-search.component.html
+++ b/src/app/reddit-search/reddit-search.component.html
@@ -2,9 +2,11 @@
   <label for="subReddit">
     Search reddit.com/r/
     <select id="subReddit" [formControl]="subReddit">
-      <option *ngFor="let sr of subReddits" [value]="sr">
-        {{ sr }}
-      </option>
+      @for (sr of subReddits; track sr) {
+        <option [value]="sr">
+          {{ sr }}
+        </option>
+      }
     </select>
   </label>
 
@@ -15,7 +17,9 @@
 </div>
 
 <div>
-  <div class="box" *ngFor="let post of results | async">
-    <img [src]="post.thumbnail" [alt]="post.title" />
-  </div>
+  @for (post of results | async; track post) {
+    <div class="box">
+      <img [src]="post.thumbnail" [alt]="post.title" />
+    </div>
+  }
 </div>
